# jupyterlite

./: PYODIDE.md  PYODIDE_SETUP.md  README.md  deploy.sh  jupyter-lite.json  requirements.txt  runtime.txt
.github/workflows/: deploy.yml
content/: ipydatagrid.ipynb  jupytext.ipynb  reset_jupyterlite_storage.ipynb  scipy.ipynb
content/panel/: panel_example.ipynb  panel_getting_started.ipynb
content/project_generator/: README.md  project_generator.ipynb  project_generator.py  project_generator2.ipynb  pyproject.toml  tasks.py
content/pyodide/: images.ipynb  ipycytoscape.ipynb  ipympl.ipynb  python-packages.ipynb  seaborn.ipynb  virtual_drive.ipynb
content/pyodide/sqlite3/: pyodide_sqlite_sqlite3.ipynb  sqlite3.ipynb
pypi/: bokeh-3.4.1-py3-none-any.whl  panel-1.4.4-py3-none-any.whl
repl/: jupyter-lite.json
